--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fs-extra",
+  "name": "customizable-fs-extra",
   "version": "9.0.0",
   "description": "fs-extra contains methods that aren't included in the vanilla Node.js fs package. Such as mkdir -p, cp -r, and rm -rf.",
   "engines": {
